[package]
name = "dwg2dxf-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version="0.8", features = ["multipart"] }
axum-openapi3 = "0.2.0"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.21.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4"] }
